changed View Height, there is a small amount of space that overlaps between portfolio and skills owkring on fixing this

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -414,8 +414,6 @@ ul#nav li.current a { color: #0F9095; }
    background: #ebeeee;
    padding-top: 90px;
    padding-bottom: 60px;
-   height: 100vh;
-   width: auto;
 }
 #portfolio h1 {
    font: 15px/24px 'opensans-semibold', sans-serif;
@@ -482,8 +480,8 @@ ul#nav li.current a { color: #0F9095; }
 	transition: opacity 0.3s ease-in-out;
 
    position: absolute;
-   top: 50%;
-   left: 50%;
+   top: 100%;
+   left: 100%;
    margin-left: -15px;
    margin-top: -15px;
 }
